[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["miam-miam <MiamMiam@mailbox.org>", "Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
itertools = "0.13.0"
pico-args = "0.5.0"
prse = "1.2.1"
regex = { version = "1.10.2", features = [] }
num-integer = "0.1.45"